# bpfs

./: README  README.md  cmake-pr.tar
block-device-server/: block-device-server.pro  blockDevice.c  blockDevice.h  main.c
build-block-device-server-Desktop_Qt_5_3_GCC_64bit-Debug/: Makefile  block-device-server
build-core-Desktop_Qt_5_3_GCC_64bit-Debug/: Makefile  core
cmake-project/: CMakeLists.txt  CMakeLists.txt.user.01fa365  CMakeLists.txt.user.934255e  README  main.cpp
cmake-project/block-device-server/: CMakeLists.txt  main.c
cmake-project/core/: CMakeLists.txt  bpfstypes.h  directory.cpp  directory.h  diskmatrix.cpp  diskmatrix.h  encryptor.cpp  encryptor.h  file.cpp  file.h  filedisk.cpp  filedisk.h  fscreator.cpp  fscreator.h  fspartition.cpp  fspartition.h  idisk.cpp  idisk.h  ifreeblockmanager.cpp  ifreeblockmanager.h  iindirectblock.cpp  iindirectblock.h  iinodemanager.cpp  iinodemanager.h  indirectblock.cpp  indirectblock.h  inode.cpp  inode.h  inodetable.cpp  inodetable.h  listfreeblockmanager.cpp  listfreeblockmanager.h  log.cpp  log.h  main.cpp  partitionheader.cpp  partitionheader.h  permissions.cpp  permissions.h  rawdatautils.cpp  (+7 more)
cmake-project/file-access/: CMakeLists.txt  blockDevice.c  blockDevice.h
cmake-project/fuse-wrapper/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
cmake-project/manager/: CMakeLists.txt  commandresolver.cpp  commandresolver.h  file.cpp  file.h  main.cpp  main.h  menuoptions.h  prompt.cpp  prompt.h
cmake-project/tests/: CMakeLists.txt  main.cpp
core/: core.pro  disk.h  main.cpp
shared/: blockDevice.c
testowe/: freeSpace  freeSpace.c  freeSpace.c~  odczyt  odczyt.c  odczyt.c~  zapis  zapis.c  zapis.c~
